// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders StopAccessibilityInformation declared unknown wheelchair boarding (0) 1`] = `
<div>
  <span
    class="fa-layers fa-fw me-1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-question text-warning fa-fw"
      data-icon="circle-question"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
        fill="currentColor"
      />
    </svg>
  </span>
  No accessibility information for the stop.
</div>
`;

exports[`renders StopAccessibilityInformation with wheelchair boarding (1) 1`] = `
<div>
  <span
    class="me-2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-wheelchair fa-fw"
      data-icon="wheelchair"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M136 40a56 56 0 1 1 112 0 56 56 0 1 1 -112 0zM117.9 197.6l12.6 63c-38.6 12.4-66.5 48.7-66.5 91.4 0 53 43 96 96 96 35.6 0 66.7-19.4 83.3-48.2 2.3 .1 4.6 .2 7 .2l4.1 0c1 0 2.1 0 3.1 0l55.2 0c-20.4 64.9-81 112-152.7 112-88.4 0-160-71.6-160-160 0-73.8 50-135.9 117.9-154.4zm148.6-28.1l23.7 118.5 60.5 0c33.3 0 63.2 20.7 74.9 51.9l25.5 68 18.7-6.2c16.8-5.6 34.9 3.5 40.5 20.2s-3.5 34.9-20.2 40.5l-48 16c-16.3 5.4-34-3-40.1-19.1l-36.3-96.9c-2.3-6.2-8.3-10.4-15-10.4l-86.1 0c-.4 0-.8 0-1.3 0l-13.1 0c-30.5 0-56.8-21.5-62.8-51.4L165.3 189.7c-6.4-31.9 18-61.7 50.6-61.7 24.6 0 45.8 17.4 50.6 41.5z"
        fill="currentColor"
      />
    </svg>
     Some vehicles at this stop can be boarded by a rider in a wheelchair.
  </span>
</div>
`;

exports[`renders StopAccessibilityInformation with wheelchair boarding unavailable (2) 1`] = `
<div>
  <span
    class="fa-layers fa-fw me-1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-wheelchair fa-fw"
      data-icon="wheelchair"
      data-prefix="fas"
      role="img"
      style="transform-origin: 0.5em 0.5em;"
      viewBox="0 0 512 512"
    >
      <g
        transform="translate(256 256)"
      >
        <g
          transform="translate(0, 0)  scale(0.5625, 0.5625)  rotate(0 0 0)"
        >
          <path
            d="M136 40a56 56 0 1 1 112 0 56 56 0 1 1 -112 0zM117.9 197.6l12.6 63c-38.6 12.4-66.5 48.7-66.5 91.4 0 53 43 96 96 96 35.6 0 66.7-19.4 83.3-48.2 2.3 .1 4.6 .2 7 .2l4.1 0c1 0 2.1 0 3.1 0l55.2 0c-20.4 64.9-81 112-152.7 112-88.4 0-160-71.6-160-160 0-73.8 50-135.9 117.9-154.4zm148.6-28.1l23.7 118.5 60.5 0c33.3 0 63.2 20.7 74.9 51.9l25.5 68 18.7-6.2c16.8-5.6 34.9 3.5 40.5 20.2s-3.5 34.9-20.2 40.5l-48 16c-16.3 5.4-34-3-40.1-19.1l-36.3-96.9c-2.3-6.2-8.3-10.4-15-10.4l-86.1 0c-.4 0-.8 0-1.3 0l-13.1 0c-30.5 0-56.8-21.5-62.8-51.4L165.3 189.7c-6.4-31.9 18-61.7 50.6-61.7 24.6 0 45.8 17.4 50.6 41.5z"
            fill="currentColor"
            transform="translate(-256 -256)"
          />
        </g>
      </g>
    </svg>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-ban text-danger fa-fw"
      data-icon="ban"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M367.2 412.5L99.5 144.8c-22.4 31.4-35.5 69.8-35.5 111.2 0 106 86 192 192 192 41.5 0 79.9-13.1 111.2-35.5zm45.3-45.3c22.4-31.4 35.5-69.8 35.5-111.2 0-106-86-192-192-192-41.5 0-79.9 13.1-111.2 35.5L412.5 367.2zM0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0z"
        fill="currentColor"
      />
    </svg>
  </span>
  Wheelchair boarding is not possible at this stop.
</div>
`;

exports[`renders StopAccessibilityInformation with wheelchair boarding unset (null) 1`] = `
<div>
  <span
    class="fa-layers fa-fw me-1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-question text-warning fa-fw"
      data-icon="circle-question"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
        fill="currentColor"
      />
    </svg>
  </span>
  No accessibility information for the stop.
</div>
`;
